# tdf2mzml

./: .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tdf2mzml.py  timsdata.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  tdf2mzml.rst  usage.rst
src/tdf2mzml/: __init__.py  cli.py  timsdata.py
tdf2mzml/: __init__.py  tdf2mzml.py  timsdata.py
tests/: __init__.py  test_tdf2mzml.py
